# studio_project_manager

./: .gitignore  Cargo.toml  Default Dark Neutral Medium copy.ask  README.md  REQUIRED_FEATURES.md  api.py  bench_integrated_test.rs  benchmark.ps1  benchmark.sh  benchmark_multi.ps1  benchmark_multi.sh  build.rs  config.toml  database_config.py  database_testing.py  db_manager.py  file_watcher.py  gui.py  logging_utility.py  main.py  package-lock.json  package.json  punk2.xml  requirements.txt  specification.md  tailwind.config.js  tauri.conf.json  tsconfig.app.json  utilities.py  vite.config.ts
docs/: codebase_patterns.md  generalisation_plan.md  plugin_scanner_plan.md
proto/: common.proto  studio_project_manager.proto
proto/services/: collections.proto  config.proto  media.proto  plugins.proto  projects.proto  samples.proto  scanning.proto  search.proto  system.proto  tags.proto  tasks.proto  watcher.proto
src/: App.tsx  ableton_db.rs  config.rs  custom_types.rs  error.rs  errors.rs  helpers.rs  index.css  lib.rs  live_set.rs  live_set_db.rs  live_set_db_test.rs  main.rs  main.tsx  main_scan.rs  mod.rs  models.rs  scan.rs  test_utils.rs  tray.rs  types.ts  utils.rs  windows_paths.rs
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/src/: live_set.rs  main.rs  models.rs
src-tauri/src/commands/: database.rs  mod.rs  scan.rs  state.rs
src-tauri/src/database/: core.rs  mod.rs  models.rs  search.rs
src-tauri/src/scan/: mod.rs  parser.rs  parser_test.rs  project_scanner.rs
src-tauri/src/utils/: plugins.rs  samples.rs
src/cli/: interactive.rs  mod.rs  output.rs
src/cli/commands/: collection.rs  config.rs  mod.rs  project.rs  sample.rs  scan.rs  search.rs  system.rs  tag.rs  task.rs
src/components/layout/: ActivityBar.tsx  MainLayout.tsx  ResizablePanel.tsx  SearchBar.tsx  Sidebar.tsx  StatusBar.tsx
src/components/ui/: toolbar.tsx
src/components/views/: CollectionsView.tsx  DetailsView.tsx  columns.tsx
src/config/: defaults.rs  loader.rs  mod.rs  paths.rs  validator.rs
src/database/: batch.rs  collections.rs  core.rs  helpers.rs  media.rs  mod.rs  models.rs  notes.rs  plugins.rs  projects.rs  samples.rs  search.rs  stats.rs  tags.rs  tasks.rs
src/grpc/: mod.rs  server.rs
src/grpc/handlers/: collections.rs  config.rs  media.rs  mod.rs  plugins.rs  projects.rs  samples.rs  search.rs  system.rs  tags.rs  tasks.rs  utils.rs
src/media/: error.rs  mod.rs  storage.rs  validation.rs
src/scan/: mod.rs  parallel.rs  parser.rs  parser_test.rs  project_scanner.rs  scanner.rs  scanner_test.rs
src/scanning/: mod.rs  plugin.rs  state.rs
src/ui/: app.rs  default_theme.rs  message.rs  mod.rs  state.rs  style.rs  theme_loader.rs
src/utils/: macos_formats.rs  metadata.rs  plugins.rs  samples.rs  tempo.rs  time_signature.rs  version.rs  xml_parsing.rs
src/watcher/: file_watcher.rs  file_watcher_test.rs  mod.rs
temp_tauri/: package-lock.json
temp_tauri/src-tauri/: Cargo.toml  tauri.conf.json
tests/: config_startup_tests.rs  config_tests.rs  database_tests.rs  grpc_tests.rs  integration_tests.rs  scan_tests.rs  test_setup_verification.rs  utils_tests.rs  watcher_tests.rs
tests/common/: builders.rs  helpers.rs  mod.rs
tests/database/: batch.rs  collections.rs  core.rs  media.rs  mod.rs  search.rs  tags.rs
tests/grpc/: batch.rs  collections.rs  media.rs  mod.rs  plugins.rs  projects.rs  samples.rs  scanning.rs  search.rs  server_setup.rs  stats.rs  tags.rs  tasks.rs
tests/integration/: end_to_end.rs  mod.rs  scanning.rs
tests/scan/: mod.rs  parallel.rs  project_scanner.rs
tests/scan/parser/: basic.rs  edge_cases.rs  macos_sample_paths.rs  metadata.rs  mod.rs  plugins.rs  samples.rs  unicode_encoding.rs
tests/utils/: metadata.rs  mod.rs
tests/watcher/: file_events.rs  mod.rs
