[package]
name = "studio_project_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
elementtree = "1.2.3"
flate2 = "1.0.30"
zune-inflate = "0.2.54"
colored = "2.1.0"
xml = "0.8.20"
quick-xml = "0.31.0"
log = "0.4.21"
env_logger = "0.11.3"
crc32fast = "1.4.0"
thiserror = "1.0.60"
hex = "0.4.3"
encoding_rs = "0.8.34"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.200", features = ["derive"] }
lazy_static = "1.4.0"
toml = "0.8.14"
dirs = "5.0.1"
once_cell = "1.19.0"
regex = "1.10.4"
parking_lot = "0.12.2"
walkdir = "2.5.0"
tempfile = "3.10.1"
terminal_size = "0.3.0"
rand = "0.8.5"