[package]
name = "seula"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
elementtree = "1.2.3"
flate2 = "1.0.30"
zune-inflate = "0.2.54"
colored = "3.0.0"
xml = "0.8.20"
quick-xml = "0.37.2"
log = "0.4.21"
env_logger = "0.11.3"
crc32fast = "1.4.0"
thiserror = "2.0.11"
hex = "0.4.3"
encoding_rs = "0.8.34"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.200", features = ["derive"] }
lazy_static = "1.4.0"
toml = "0.8.14"
dirs = "6.0.0"
once_cell = "1.19.0"
regex = "1.10.4"
parking_lot = "0.12.2"
walkdir = "2.5.0"
tempfile = "3.10.1"
terminal_size = "0.4.1"
rand = "0.8.5"
notify = "8.0.0"              # File system events
tokio = { version = "1.0", features = ["full"] }  # Async runtime
sha2 = "0.10"              # File hashing
chrono = { version = "0.4.39", features = ["serde"] }
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"
async-trait = "0.1"
strum = "0.27.1"
strum_macros = "0.27.1"
tray-icon = "0.21"        # System tray functionality

# CLI dependencies
clap = { version = "4.0", features = ["derive", "color"] }
rustyline = "10.0"        # Interactive readline functionality
comfy-table = "7.0"       # Beautiful table formatting
indicatif = "0.17"        # Progress bars
crossterm = "0.27"        # Terminal manipulation
csv = "1.3"               # CSV output support
serde_json = "1.0"        # JSON output support
sys-info = "0.9"          # System information

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
winreg = "0.52"

[build-dependencies]
tonic-build = "0.10"
