[package]
name = "studio_project_manager"
version = "0.1.0"
description = "Studio Project Manager - Ableton Live Set Manager"
authors = ["you"]
license = ""
repository = ""
default-run = "studio_project_manager"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
elementtree = "1.2.3"
flate2 = "1.0.30"
zune-inflate = "0.2.54"
colored = "3.0.0"
xml = "0.8.20"
quick-xml = "0.37.2"
log = "0.4.21"
env_logger = "0.11.3"
crc32fast = "1.4.0"
thiserror = "2.0.11"
hex = "0.4.3"
encoding_rs = "0.8.34"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
toml = "0.8.14"
dirs = "6.0.0"
once_cell = "1.19.0"
regex = "1.10.4"
parking_lot = "0.12.2"
walkdir = "2.5.0"
tempfile = "3.10.1"
terminal_size = "0.4.1"
rand = "0.8.5"
notify = "8.0.0"              # File system events
tokio = { version = "1.0", features = ["full"] }  # Async runtime
sha2 = "0.10"              # File hashing
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0"
tauri = { version = "1.5.4", features = [
    "fs-all",
    "devtools",
    "tracing"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
